# pegasus

./: .dockerignore  .env.example  .gitignore  .ocamlformat-ignore  Caddyfile  Dockerfile  README.md  dag_cbor.opam  docker-compose.yaml  dune  dune-project  dune-workspace  frontend.opam  hermes-cli.opam  hermes.opam  hermes_ppx.opam  ipld.opam  kleidos.opam  mist.opam  package.json  pegasus.opam  pnpm-lock.yaml  tailwindcss.opam
frontend/client/: QRCode.mlx  Router.mlx  WebAuthn.mlx  client.mlx  dune
frontend/lib/: client.ml  dune
frontend/lib/components/: Button.mlx  Input.mlx
frontend/lib/icons/: CircleAlert.mlx
frontend/lib/templates/: Authorize.mlx  Layout.mlx  Login.mlx
frontend/src/: dune
frontend/src/components/: AccountSidebar.mlx  AccountSwitcher.mlx  AdminSidebar.mlx  Button.mlx  ClientOnly.mlx  HandleInput.mlx  Input.mlx  ReactAria.mlx  Sidebar.mlx
frontend/src/icons/: AtIcon.mlx  BlueskyIcon.mlx  BoxesIcon.mlx  CheckmarkIcon.mlx  ChevronDownIcon.mlx  CircleAlertIcon.mlx  EllipsisIcon.mlx  FolderGitIcon.mlx  MailIcon.mlx  MessageIcon.mlx  PencilLineIcon.mlx  TrashIcon.mlx  UploadIcon.mlx  UsersRoundIcon.mlx  XIcon.mlx
frontend/src/templates/: AccountIdentityPage.mlx  AccountPage.mlx  AccountPermissionsPage.mlx  AccountSecurityPage.mlx  AdminBlobsPage.mlx  AdminInvitesPage.mlx  AdminLoginPage.mlx  AdminUsersPage.mlx  Layout.mlx  LoginPage.mlx  MigratePage.mlx  OauthAuthorizePage.mlx  PasswordResetPage.mlx  RootPage.mlx  SignupPage.mlx
hermes/test/: dune  mock_http.ml  test_client.ml  test_credential_manager.ml  test_jwt.ml  test_types.ml  test_utils.ml
mist/lib/: blob_ref.ml  block_map.ml  dune  lex.ml  mst.ml  node.ml  repository.ml  tid.ml  util.ml
mist/lib/storage/: blob_store.ml  block_map.ml  blockstore.ml  cache_blockstore.ml  memory_blockstore.ml  memory_store.ml  overlay_blockstore.ml  overlay_store.ml  repo_store.ml  storage.ml
pegasus/lib/: actor_store.ml  auth.ml  blob_store.ml  data_store.ml  dune  env.ml  errors.ml  id_resolver.ml  identity_util.ml  jwt.ml  lexicon_resolver.ml  log.ml  migrations.ml  mst_store.ml  passkey.ml  plc.ml  rate_limiter.ml  record_store.ml  repository.ml  rsc.ml  security_key.ml  sequencer.ml  session.ml  sqlite_blockstore.ml  sqlite_blockstore.mli  totp.ml  ttl_cache.ml  two_factor.ml  user_store.ml  util.ml  xrpc.ml
pegasus/lib/api/: health.ml  robots.ml  root.ml  well_known.ml
pegasus/lib/api/account_/: identity.ml  index.ml  login.ml  logout.ml  migrate.ml  passkeys.ml  password_reset.ml  permissions.ml  signup.ml
pegasus/lib/api/actor/: getPreferences.ml  putPreferences.ml
pegasus/lib/api/admin/: deleteAccount.ml  getAccountInfo.ml  getAccountInfos.ml  getInviteCodes.ml  sendEmail.ml  updateAccountEmail.ml  updateAccountHandle.ml
pegasus/lib/api/admin_/: blobs.ml  index.ml  invites.ml  login.ml  users.ml
pegasus/lib/api/identity/: getRecommendedDidCredentials.ml  requestPlcOperationSignature.ml  resolveHandle.ml  signPlcOperation.ml  submitPlcOperation.ml  updateHandle.ml
pegasus/lib/api/oauth_/: authorize.ml  par.ml  token.ml
pegasus/lib/api/proxy/: appBskyActorGetPreferences.ml  appBskyActorPutPreferences.ml  appBskyFeedGetFeed.ml
pegasus/lib/api/repo/: applyWrites.ml  createAccount.ml  createRecord.ml  deleteRecord.ml  describeRepo.ml  getRecord.ml  importRepo.ml  listMissingBlobs.ml  listRecords.ml  putRecord.ml  uploadBlob.ml
pegasus/lib/api/server/: activateAccount.ml  checkAccountStatus.ml  confirmEmail.ml  createAccount.ml  createInviteCode.ml  createInviteCodes.ml  createSession.ml  deactivateAccount.ml  deleteAccount.ml  deleteSession.ml  describeServer.ml  getServiceAuth.ml  getSession.ml  refreshSession.ml  requestAccountDelete.ml  requestEmailConfirmation.ml  requestEmailUpdate.ml  requestPasswordReset.ml  reserveSigningKey.ml  resetPassword.ml  subscribeRepos.ml  updateEmail.ml
pegasus/lib/api/sync/: getBlob.ml  getBlocks.ml  getLatestCommit.ml  getRecord.ml  getRepo.ml  getRepoStatus.ml  listBlobs.ml  listRepos.ml  subscribeRepos.ml
pegasus/lib/emails/: accountDelete.mlx  adminEmail.mlx  emailConfirmation.mlx  emailStyles.mlx  emailTemplate.mlx  emailUpdate.mlx  passwordReset.mlx  plcOperation.mlx  twoFactorAuth.mlx
pegasus/lib/lexicons/: app_bsky_actor_getProfiles.ml  app_bsky_actor_getSuggestions.ml  app_bsky_actor_searchActorsTypeahead.ml  app_bsky_ageassurance_defs.ml  app_bsky_ageassurance_getState.ml  app_bsky_bookmark_getBookmarks.ml  app_bsky_contact_getMatches.ml  app_bsky_feed_getAuthorFeed.ml  app_bsky_feed_getFeedGenerators.ml  app_bsky_feed_getLikes.ml  app_bsky_feed_getListFeed.ml  app_bsky_feed_getPosts.ml  app_bsky_feed_getQuotes.ml  app_bsky_feed_getRepostedBy.ml  app_bsky_feed_getTimeline.ml  app_bsky_feed_searchPosts.ml  app_bsky_feed_sendInteractions.ml  app_bsky_feed_threadgate.ml  app_bsky_graph_getActorStarterPacks.ml  app_bsky_graph_getBlocks.ml  app_bsky_graph_getFollowers.ml  app_bsky_graph_getKnownFollowers.ml  app_bsky_graph_getList.ml  app_bsky_graph_getListMutes.ml  app_bsky_graph_getLists.ml  app_bsky_graph_getListsWithMembership.ml  app_bsky_graph_getMutes.ml  app_bsky_graph_getRelationships.ml  app_bsky_graph_getStarterPacks.ml  app_bsky_graph_getStarterPacksWithMembership.ml  app_bsky_graph_listitem.ml  app_bsky_graph_muteActorList.ml  app_bsky_graph_searchStarterPacks.ml  app_bsky_graph_starterpack.ml  app_bsky_graph_unmuteActorList.ml  app_bsky_labeler_getServices.ml  app_bsky_notification_defs.ml  app_bsky_notification_listNotifications.ml  app_bsky_shared_1.ml  app_bsky_unspecced_getOnboardingSuggestedStarterPacks.ml  (+38 more)
pegasus/lib/migrations/: 001_initial_schema.sql  003_two_factor_auth.sql  004_reserved_keys.sql  migrations.ml
pegasus/lib/migrations/data_store/: 003_two_factor_auth.sql  (+5 more)
pegasus/lib/oauth/: client.ml  constants.ml  dpop.ml  queries.ml  scopes.ml  token.ml  types.ml
pegasus/lib/s3/: backup.ml  blob_migration.ml
pegasus/lib/templates/: layout.mlx  login.mlx  oauth_authorize.mlx
pegasus/lib/util/: constants.ml  html.ml  http_.ml  mime_sniff.ml  rapper_.ml  sqlite_.ml  syntax.ml  time.ml  types.ml  util.ml
(+311 files in other folders)
