(subdir
 public/
 (rule
  (target index.css)
  (deps
   %{workspace_root}/tools/tailwindcss/tailwindcss
   (:input %{workspace_root}/public/main.css)
   (source_tree %{workspace_root}/public)
   (source_tree %{workspace_root}/frontend))
  (action
   (chdir
    %{workspace_root}
    (run
     %{workspace_root}/tools/tailwindcss/tailwindcss
     -m
     -i
     %{input}
     -o
     %{target})))))

(subdir
 public/
 (rule
  (alias client)
  (target client.js)
  (deps
   (:script ../frontend/build.mjs)
   (:entrypoints ../frontend/client/client/frontend/client/client.js)
   (source_tree ../frontend/client)
   (source_tree ../frontend/src))
  (action
   (run
    node
    %{script}
    %{entrypoints}
    --output=./client.js
    --extract=true
    --env=%{env:NODE_ENV='production'}))))
