(subdir
 public/
 (rule
  (target index.css)
  (deps
   %{workspace_root}/tools/tailwindcss/tailwindcss
   (:input %{workspace_root}/public/main.css)
   (source_tree %{workspace_root}/public)
   (source_tree %{workspace_root}/frontend))
  (action
   (chdir
    %{workspace_root}
    (run
     %{workspace_root}/tools/tailwindcss/tailwindcss
     -m
     -i
     %{input}
     -o
     %{target})))))

(subdir
 public/
 (rule
  (alias client)
  (target client.js)
  (deps
   (:script ../frontend/build.mjs)
   (:entrypoints ../frontend/client/client/frontend/client/client.js)
   (alias_rec ../frontend/melange)
   (package frontend))
  (action
   (run
    node
    %{script}
    %{entrypoints}
    --output=./client.js
    --extract=true
    --env=%{profile}))))

(subdir
 bin/
 (rule
  (target public.ml)
  (deps
   (file ../public/client.js)
   (file ../public/index.css)
   (source_tree ../public/fonts))
  (action (with-stdout-to %{null}
   (run ocaml-crunch -e woff -e woff2 -e js -e css -m plain ../public -o %{target})))))
