(library
 (name frontend)
 (modules :standard \ client)
 (libraries server-reason-react.react)
 (preprocess
  (pps server-reason-react.melange_ppx server-reason-react.ppx)))

(melange.emit
 (target app)
 (modules client)
 (module_systems es6)
 (libraries
  melange.js
  reason-react
  react_server_dom_esbuild
  server-reason-react.url_js
  melange-webapi)
 (preprocess
  (pps melange.ppx reason-react-ppx)))

(include_subdirs qualified)
