(include_subdirs unqualified)

(library
 (name frontend)
 (modes native)
 (libraries
  server-reason-react.react
  server-reason-react.reactDom
  dream
  melange-fetch
  melange-json-native
  melange-webapi)
 (preprocess
  (pps
   melange-json-native.ppx
   server-reason-react.melange_ppx
   server-reason-react.ppx
   server-reason-react.browser_ppx)))
