(library
 (name mist)
 (libraries
  core_unix.time_stamp_counter
  core_unix.time_ns_unix
  digestif
  hacl-star
  ipld
  lwt
  lwt.unix
  mtime.clock
  multihash
  re
  str
  yojson
  lwt_ppx
  ppx_deriving_yojson.runtime)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson)))

(include_subdirs qualified)
