(library
 (name pegasus)
 (libraries
  caqti
  caqti-lwt
  caqti-lwt.unix
  caqti-driver-sqlite3
  cohttp
  cohttp-lwt-unix
  dns-client.unix
  dream
  ipld
  jwto
  kleidos
  lwt
  lwt.unix
  mist
  re
  safepass
  str
  timedesc
  uuidm
  yojson
  lwt_ppx
  ppx_deriving_yojson.runtime
  ppx_rapper_lwt)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson ppx_rapper)))

(include_subdirs qualified)
