(library
 (name pegasus)
 (libraries
  caqti
  caqti-lwt
  caqti-lwt.unix
  caqti-driver-sqlite3
  cohttp
  cohttp-lwt-unix
  dns-client.unix
  dream
  html_of_jsx
  ipld
  kleidos
  lwt
  lwt.unix
  mist
  re
  safepass
  str
  timedesc
  uri
  uuidm
  yojson
  lwt_ppx
  ppx_deriving_yojson.runtime
  ppx_rapper_lwt)
 (preprocess
  (pps html_of_jsx.ppx lwt_ppx ppx_deriving_yojson ppx_rapper)))

(include_subdirs qualified)
