(library
 (name pegasus)
 (libraries
  aws-s3-lwt
  caqti
  caqti-lwt
  caqti-lwt.unix
  caqti-driver-sqlite3
  cohttp
  cohttp-lwt-unix
  core_unix
  dns-client.unix
  dream
  emile
  frontend
  ipld
  kleidos
  letters
  lwt
  lwt.unix
  mist
  re
  safepass
  server-reason-react.reactDom
  timedesc
  uri
  uuidm
  yojson
  lwt_ppx
  ppx_deriving_yojson.runtime
  ppx_rapper_lwt)
 (preprocess
  (pps lwt_ppx ppx_deriving_yojson ppx_rapper)))

(include_subdirs qualified)
